testsuite/tests/polykinds/T15795.stderr

T15795.hs:12:3: error:
    • Skolem escape leads to quantification failure.
      When quantifying this type:
        forall k1 (b :: k1). T @k1 @a0 b
      these skolems would escape:
        k
      if we quantified this variable:
        (a0 :: k)
      (Indeed, I struggle even printing this correctly,
       due to its ill-scoped nature.)
    • In the definition of data constructor ‘MkT’
      In the data declaration for ‘T’
